adapt to dependency chanves